# HW1-parallelo-e-distribuito-mod.B

./: CMakeLists.txt  PBS.pbs  README.md  main.c  main.csv
RisCluster/: PBS2.pbs  RisultatiPerSpeedUp.csv  RisultatiPerSpeedUpScalato.csv  main.csv  main.err
include/Mat_Mat/: mat_mat.c  mat_mat.h  mat_mat_distributed.c  mat_mat_distributed.h
include/Utility/: utility.c  utility.h  utilityMPI.c  utilityMPI.h
